Fix look of div#left when viewport gets shorter
When viewport gets shorter than the contents of div#right, the page
will be scrollable. When you scroll down, div#left is shorter than
div#right, which results in awkward white space under div#left.

This happens because the height of body is set to 100%, so the contents
of div#right will overflow when the viewport gets too short.

--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,12 @@
-body, html {
-    height: 100%;
+html {
+    box-sizing: border-box;
+}
+
+body {
+    min-height: 100vh;
     margin: 0;
     padding: 0;
+    display: flex;
     box-sizing: border-box;
 }
 
